# fivo

./: .gitignore  CMakeLists.txt  README.md
inc/: startup.hpp
src/: main.cpp
src/commands/: CMakeLists.txt
src/commands/help/: CMakeLists.txt  helpCommand.hpp
src/commands/math/: CMakeLists.txt  addCommand.hpp  mulCommand.hpp  multCommand.hpp  sqrtCommand.hpp  subCommand.hpp
src/commands/network/http/: CMakeLists.txt  httpCommand.hpp
src/commands/system/: CMakeLists.txt  shellCommand.hpp
src/core/: CMakeLists.txt  commandBase.cpp  commandBase.hpp  commandRegistry.cpp  commandRegistry.hpp
src/utils/: CMakeLists.txt  utils.hpp
